--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "ag-grid-community": "^29.1.0",
     "ag-grid-enterprise": "^29.1.0",
     "ag-grid-react": "^29.1.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
