--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ag-grid-enterprise": "^29.1.0",
     "ag-grid-react": "^29.1.0",
     "lodash": "^4.17.21",
+    "mathjs": "^11.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
